<resources>
    <string name="app_name">TouchSori</string>
    <string name="policy">개인정보 처리 방침</string>
    <string name="phone_number_insert">내 전화번호 입력</string>
    <string name="sireal_number_insert">시리얼 번호 입력</string>
    <string name="btn_done">입력완료</string>
    <string name="ansim_setting">안심귀가 설정</string>
    <string name="ansim_plus_setting">수신자 관리</string>
    <string name="ok">확인</string>
    <string name="cancle">취소</string>
    <string name="no_agree">거절</string>
    <string name="agree">동의</string>
    <string name="detail">자세히</string>
    <string name="delete">삭제</string>
    <string name="selfinsert">직접입력</string>
    <string name="sms_with">주소록</string>
    <string name="setting_title">제품 시리얼 넘버 및 긴급 SNS 수신 국가를 수정할 수 있습니다.</string>
    <string name="setting_sNumber">터치소리 제품 시리얼 번호</string>
    <string name="setting_country">긴급 SMS 수신 국가</string>
    <string name="setting_sos_insert">긴급상황 수신자를 등록합니다</string>
    <string name="setting_sos_delete">긴급상황 수신자에서\n 삭제하시겠습니까</string>
    <string name="ansim_title">귀가 시간을 설정하고 , 설정시간 내에 버튼을 누르면 등록한 번호로 위험메시지가 전송됩니다.</string>
    <string name="ansim_update_title">안심귀가 서비스를 24시간 이용하고\n 싶으시면 24시간에 체크하여 주세요.</string>
    <string name="text1">○ 개인위치정보를 이용한 위치기반서비스 제공 동의\n\n
        (1) 본인은 서비스에서 제공되는 위치기반서비스를 이용하기 위하여,
        아래 (2)의 내용 및 회사의 위치기반서비스 이용 약관의 내용에 동의합니다.
         (www.skt.com에서 동 이용약관의 내용을 확인하실 수 있습니다)\n\n
  (2) 서비스에서 제공하는 위치기반서비스의 내용\n
        - 본 서비스는 신변보호 대상자들의 위치를 주기적으로 수집하여
         신변보호 대상자들이 위험한 상황에 노출되었을 경우 긴급구조기관
        (경찰 또는 119)에 신변보호자 대상자의 위치 정보를 제공함으로 정확하고
         빠른 구조를 받을 수 있도록 하기 위함입니다.\n\n
   (3) 위치기반서비스 사업자의 상호, 주소, 전화번호 그 밖의 연락처 / 개인위치정보주체
         및 법정대리인의 권리와 그 행사방법 / 위치기반서비스사업자가 제공하고자 하는
         위치기반서비스의 내용 / 위치정보 이용∙제공사실 확인자료의 보유근거 및 보유기간
         등은 회사의 위치기반서비스 이용 약관에 기재된 바에 따릅니다.
</string>
</resources>