<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <com.sori.touchsori.utill.CustomToolbar
        android:id="@+id/ansim_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </com.sori.touchsori.utill.CustomToolbar>



    <LinearLayout
        android:id="@+id/ansim_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ansim_toolbar"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo_small"
            android:adjustViewBounds="true"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:lineSpacingExtra="3dp"
            android:text="@string/ansim_title" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@drawable/box_circle_gray"

                />

            <!--<LinearLayout-->
                <!--android:id="@+id/ansim_content_rl"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_margin="15dp">-->


                <ImageView
                    android:id="@+id/ansim_alarm_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_siren" />

                <TextView
                    android:id="@+id/ansim_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="24시간" />

                <!--<LinearLayout-->
                    <!--android:id="@+id/ansim_befor_ll"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:padding="10dp"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:id="@+id/ansim_beforehour_tv"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="오후" />-->

                    <!--<TextView-->
                        <!--android:id="@+id/ansim_beforetime_tv"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textSize="35dp"-->
                        <!--android:text="9:00" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="에서" />-->


                <!--</LinearLayout>-->


                <!--<LinearLayout-->
                    <!--android:id="@+id/ansim_after_ll"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:padding="10dp"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:id="@+id/ansim_afterhour_tv"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="오전" />-->

                    <!--<TextView-->
                        <!--android:id="@+id/ansim_aftertime_tv"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textSize="35dp"-->
                        <!--android:text="9:00" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="까지" />-->


                <!--</LinearLayout>-->

                <FrameLayout
                    android:id="@+id/ansim_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/box_check_circle"
                    android:layout_gravity="bottom|right">

                    <CheckBox
                        android:id="@+id/ansim_alarm_btn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null" />

                </FrameLayout>

            <!--</LinearLayout>-->

        </FrameLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ansim_ment_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:text="길게 누르면 수정. 삭제할 수 있습니다." />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <CheckBox
                    android:id="@+id/siren_cv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:buttonTint="@color/bolder_text"
                    android:padding="10dp"
                    android:textSize="13sp"
                    android:text="사이렌" />

                <TextView
                    android:id="@+id/ansim_contacts_load_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:background="@drawable/rounded"
                    android:text="@string/ansim_plus_setting"
                    android:textColor="@color/white"
                    android:hint="@string/btn_done"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <TextView
                android:id="@+id/ansim_time_setting_tv"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white_medium_n"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/bolder_text"
                android:textColorHint="@color/bolder_text"
                android:textSize="16sp"
                android:padding="10dp"
                android:hint="+ 안심귀가 시간 설정"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ansim_sos_tv"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white_medium_n"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:textColor="@color/gray"
                android:textColorHint="@color/bolder_text"
                android:hint="+ 긴급상황 수신자 등록"
                android:textSize="16sp"
                android:textStyle="bold"/>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>